fudanbot_ws/log/build_2024-12-11_16-21-44/motor_driver/stderr.log
  File "/home/desu/fudanbot_ws/install/motor_driver/lib/python3.10/site-packages/motor_driver/motor_driver.py", line 30
    self.get_logger().info(% msg.linear)
                           ^
SyntaxError: invalid syntax

